--- a/RealEstate_Dapper/RealEstate_Dapper_UI/Views/Default/Index.cshtml
+++ b/RealEstate_Dapper/RealEstate_Dapper_UI/Views/Default/Index.cshtml
@@ -4,5 +4,16 @@
     Layout = "~/Views/Shared/_DefaultLayout.cshtml";
 }
 
-<h1>Burası ana sayfa olacak</h1>
+@await Component.InvokeAsync("_DefaultFeatureComponentPartial");
+@await Component.InvokeAsync("_DefaultHomePageProductList");
+@await Component.InvokeAsync("_DefaultWhoWeAreComponentPartial");
+@await Component.InvokeAsync("_DefaultServicesViewComponentPartial");
+@await Component.InvokeAsync("_DefaultProductListExploreCitiesComponentPartial");
+@await Component.InvokeAsync("_DefaultOurClientsComponentPartial");
+@await Component.InvokeAsync("_DefaultSubFeatureComponentPartial");
+@await Component.InvokeAsync("_DefaultDiscountOfDayComponentPartial");
+
+
+
+
 
