--- a/RealEstate_Dapper/RealEstate_Dapper_UI/Views/_ViewImports.cshtml
+++ b/RealEstate_Dapper/RealEstate_Dapper_UI/Views/_ViewImports.cshtml
@@ -4,5 +4,6 @@
 @using RealEstate_Dapper_UI.Dtos.ProductDtos
 @using RealEstate_Dapper_UI.Dtos.BottomGridDtos
 @using RealEstate_Dapper_UI.Dtos.PopularLocationDtos;
+@using RealEstate_Dapper_UI.Dtos.TestimonialDtos;
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
