--- a/RealEstate_Dapper/RealEstate_Dapper_UI/Views/Shared/Components/_AdminPageSidebarComponentPartial/Default.cshtml
+++ b/RealEstate_Dapper/RealEstate_Dapper_UI/Views/Shared/Components/_AdminPageSidebarComponentPartial/Default.cshtml
@@ -20,9 +20,9 @@
             <a href="/Employee/Index" class="nav-item nav-link"><i class="fa fa-keyboard me-2"></i>Personeller</a>
             <a href="/Product/Undex" class="nav-item nav-link"><i class="fa fa-table me-2"></i>İlanlar</a>
             <a href="/Chart/Index" class="nav-item nav-link"><i class="fa fa-chart-bar me-2"></i>Grafikler</a>
-            <a href="/Statistics/Index" class="nav-item nav-link"><i class="fa fa-chart-bar me-2"></i>İstatistikler</a>
+            <a href="/Statistic/Index" class="nav-item nav-link"><i class="fa fa-chart-bar me-2"></i>İstatistikler</a>
             <a href="/Chart/Index" class="nav-item nav-link"><i class="fa fa-chart-bar me-2"></i>Apiler</a>
-            <a href="//Index" class="nav-item nav-link"><i class="fa fa-chart-bar me-2"></i>Biz Kimiz</a>
+            <a href="/Index" class="nav-item nav-link"><i class="fa fa-chart-bar me-2"></i>Biz Kimiz</a>
             <a href="/Chart/Index" class="nav-item nav-link"><i class="fa fa-chart-bar me-2"></i>Hizmetler</a>
             <a href="/Chart/Index" class="nav-item nav-link"><i class="fa fa-chart-bar me-2"></i>Popüler Lokasyonlar</a>
             <a href="/Chart/Index" class="nav-item nav-link"><i class="fa fa-chart-bar me-2"></i>Günün Fırsatları</a>
