--- a/RealEstate_Dapper/RealEstate_Dapper_UI/Views/Product/Index.cshtml
+++ b/RealEstate_Dapper/RealEstate_Dapper_UI/Views/Product/Index.cshtml
@@ -2,6 +2,7 @@
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Admin/Index.cshtml";
+    int count = 0;
 }
 
 <div class="container-fluid pt-4 px-4">
@@ -23,29 +24,39 @@
                                 <th scope="col">Sil</th>
                                 <th scope="col">Güncelle</th>
                                 <th scope="col">Sitede Gör</th>
+                                <th scope="col">Günün Fırsatı</th>
                             </tr>
                         </thead>
                         <tbody>
                             @foreach (var item in Model)
                             {
+                                count++;
                                 <tr>
-                                    <th scope="row">@item.ProductID</th>
+                                    <th scope="row">@count</th>
                                     <td>@item.Title</td>
                                     <td>@item.City</td>
                                     <td>@item.District</td>
                                     <td>@item.CategoryName</td>
                                     <td>@item.Price</td>
                                     <td>@item.Type</td>
-                                    <td><a href="/Product/DeleteProduct/@item.ProductID" class="btn btn-outline-danger">Sil</a></td>
-                                    <td><a href="/Product/UpdateProduct/@item.ProductID" class="btn btn-outline-success">Güncelle</a></td>
-                                    <td><a href="/Product/ProductDetail/@item.ProductID" class="btn btn-outline-primary">Sitede Gör</a></td>
+                                    <td><a href="/Product/DeleteProduct/@item.ProductId" class="btn btn-outline-danger">Sil</a></td>
+                                    <td><a href="/Product/UpdateProduct/@item.ProductId" class="btn btn-outline-success">Güncelle</a></td>
+                                    <td><a href="/Product/ProductDetail/@item.ProductId" class="btn btn-outline-primary">Sitede Gör</a></td>
+                                    <td>
+                                        @if (item.DealOfTheDay == true)
+                                        {
+                                            <a href="/Product/ProductDealOfTheDayStatusChangeToFalse/@item.ProductId" class="btn btn-outline-secondary">Pasif Yap</a>
+                                        }
+                                        @if (item.DealOfTheDay == false)
+                                        {
+                                            <a href="/Product/ProductDealOfTheDayStatusChangeToTrue/@item.ProductId" class="btn btn-outline-warning">Aktif Yap</a>
+                                        }
+                                    </td>
                                 </tr>
                             }
-
                         </tbody>
                     </table>
-                    <td><a href="/Product/CreateProduct/" class="btn btn-outline-info">Yeni İlan Girişi</a></td>
-
+                    <a href="/Product/CreateProduct/" class="btn btn-outline-info">Yeni İlan Girişi</a>
                 </div>
             </div>
         </div>
