--- a/RealEstate_Dapper/RealEstate_Dapper_UI/Views/_ViewImports.cshtml
+++ b/RealEstate_Dapper/RealEstate_Dapper_UI/Views/_ViewImports.cshtml
@@ -8,5 +8,8 @@
 @using RealEstate_Dapper_UI.Dtos.EmployeeDtos;
 @using RealEstate_Dapper_UI.Dtos.ServiceDtos;
 @using RealEstate_Dapper_UI.Dtos.WhoWeAreDetailDtos;
+@using RealEstate_Dapper_UI.Dtos.ContactDtos;
+@using RealEstate_Dapper_UI.Dtos.ToDoListDtos;
+
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
